--- a/day-3/exercise.css
+++ b/day-3/exercise.css
@@ -4,17 +4,21 @@ body{
 }
 
 .id_cont{
-    margin-top: 6%;
-    width: 22%;
+    margin-top: 4%;
+    width: 450px;
     text-align: center;
     border: 2px solid rgb(255, 247, 247);
-    background: #efefef;
+    background-color: #ffffff;
     border-radius: 5%; 
+    padding: 10px;
 }
 
-.img{
-    width: 100%;
-}
 .header{
-    background: #c8c7c7;
+    background: #c8c7c7;    
+}
+
+.id_img img {
+    width: 100%;  
+    height: 350px;      
+    border-radius: 4px; 
 }
