--- a/day-4/card.css
+++ b/day-4/card.css
@@ -1,8 +1,39 @@
-.container{
-    font-size: 35px;
-    color: rgb(212, 156, 13);
-    text-align: center;
-    background-color: blue ;
-    padding: 5%;
-    border: 10px solid rgb(0, 0, 0);
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+
+.id_cont{
+    background-color:rgb(216, 216, 216);
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    
+}
+.id{
+    width: 450px;
+    text-align: center;
+    border: 2px solid rgb(255, 247, 247);
+    background-color: #ffffff;
+    border-radius: 5%; 
+    padding: 10px;
+    gap: 26px;
+}
+
+.header{
+    background: #c8c7c7;  
+    margin: 16px;  
+    border: 1px solid #5e5d5d;
+}
+
+.id_img img {
+    width: 100%;  
+    height: 350px;      
+    border-radius: 4px; 
+    padding: 16px;
+}
+
